--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "keywords": ["telegram", "best", "duplicate", "media", "removing", "robot"],
   "logo": "https://img.apksum.com/4c/com.duplicate.files.remover.duplicatefinderfiles/1.0/icon.png",
   "website": "https://github.com/m4mallu/uniquify",
-  "repository": "https://github.com/m4mallu/uniquify",
+  "repository": "https://github.com/ramdin23/uniquify",
   "env": {
         "APP_ID": {"description": "Get this value from https://my.telegram.org", "required": true},
         "API_HASH": {"description": "Get this value from https://my.telegram.org" , "required": true},
@@ -19,7 +19,7 @@
   "formation": {
     "worker": {
       "quantity": 1,
-      "size": "free"
+      "size": "web"
     }
   }
 }
